@@ -16,8 +16,8 @@
 	<date>2011-11-20</date>
 	<time>12:02:14</time>
 	<version>
-		<release>1.15</release>
-		<api>1.15</api>
+		<release>1.16</release>
+		<api>1.16</api>
 	</version>
 	<stability>
 		<release>stable</release>
