@@ -697,42 +697,42 @@ class sieverules extends rcube_plugin
 			$join = trim(get_input_value('_join', RCUBE_INPUT_POST));
 			$disabled = trim(get_input_value('_disable', RCUBE_INPUT_POST));
 
-			$tests = $_POST['_test'];
-			$headers = $_POST['_header'];
-			$bodyparts = $_POST['_bodypart'];
-			$ops = $_POST['_operator'];
-			$sizeops = $_POST['_size_operator'];
-			$dateops = $_POST['_date_operator'];
-			$spamtestops = $_POST['_spamtest_operator'];
-			$targets = $_POST['_target'];
-			$sizeunits = $_POST['_units'];
-			$contentparts = $_POST['_body_contentpart'];
-			$comparators = $_POST['_comparator'];
-			$advops = $_POST['_advoperator'];
-			$advtargets = $_POST['_advtarget'];
-			$actions = $_POST['_act'];
-			$folders = $_POST['_folder'];
-			$customfolders = $_POST['_customfolder'];
-			$addresses = $_POST['_redirect'];
-			$rejects = $_POST['_reject'];
-			$vacfroms = $_POST['_vacfrom'];
-			$vactos = $_POST['_vacto'];
-			$days = $_POST['_day'];
-			$handles = $_POST['_handle'];
-			$subjects = $_POST['_subject'];
-			$origsubjects = $_POST['_orig_subject'];
-			$msgs = $_POST['_msg'];
-			$htmlmsgs = $_POST['_htmlmsg'];
-			$charsets = $_POST['_charset'];
-			$flags = $_POST['_imapflags'];
-			$nfroms = $_POST['_nfrom'];
-			$nimpts = $_POST['_nimpt'];
-			$nmethods = $_POST['_nmethod'];
-			$noptions = $_POST['_noption'];
-			$nmsgs = $_POST['_nmsg'];
-			$dateparts = $_POST['_datepart'];
-			$weekdays = $_POST['_weekday'];
-			$advweekdays = $_POST['_advweekday'];
+			$tests = get_input_value('_test', RCUBE_INPUT_POST);
+			$headers = get_input_value('_header', RCUBE_INPUT_POST);
+			$bodyparts = get_input_value('_bodypart', RCUBE_INPUT_POST);
+			$ops = get_input_value('_operator', RCUBE_INPUT_POST);
+			$sizeops = get_input_value('_size_operator', RCUBE_INPUT_POST);
+			$dateops = get_input_value('_date_operator', RCUBE_INPUT_POST);
+			$spamtestops = get_input_value('_spamtest_operator', RCUBE_INPUT_POST);
+			$targets = get_input_value('_target', RCUBE_INPUT_POST, true);
+			$sizeunits = get_input_value('_units', RCUBE_INPUT_POST);
+			$contentparts = get_input_value('_body_contentpart', RCUBE_INPUT_POST);
+			$comparators = get_input_value('_comparator', RCUBE_INPUT_POST);
+			$advops = get_input_value('_advoperator', RCUBE_INPUT_POST);
+			$advtargets = get_input_value('_advtarget', RCUBE_INPUT_POST, true);
+			$actions = get_input_value('_act', RCUBE_INPUT_POST);
+			$folders = get_input_value('_folder', RCUBE_INPUT_POST);
+			$customfolders = get_input_value('_customfolder', RCUBE_INPUT_POST);
+			$addresses = get_input_value('_redirect', RCUBE_INPUT_POST);
+			$rejects = get_input_value('_reject', RCUBE_INPUT_POST);
+			$vacfroms = get_input_value('_vacfrom', RCUBE_INPUT_POST);
+			$vactos = get_input_value('_vacto', RCUBE_INPUT_POST);
+			$days = get_input_value('_day', RCUBE_INPUT_POST);
+			$handles = get_input_value('_handle', RCUBE_INPUT_POST);
+			$subjects = get_input_value('_subject', RCUBE_INPUT_POST, true);
+			$origsubjects = get_input_value('_orig_subject', RCUBE_INPUT_POST, true);
+			$msgs = get_input_value('_msg', RCUBE_INPUT_POST, true);
+			$htmlmsgs = get_input_value('_htmlmsg', RCUBE_INPUT_POST, true);
+			$charsets = get_input_value('_charset', RCUBE_INPUT_POST);
+			$flags = get_input_value('_imapflags', RCUBE_INPUT_POST);
+			$nfroms = get_input_value('_nfrom', RCUBE_INPUT_POST);
+			$nimpts = get_input_value('_nimpt', RCUBE_INPUT_POST);
+			$nmethods = get_input_value('_nmethod', RCUBE_INPUT_POST);
+			$noptions = get_input_value('_noption', RCUBE_INPUT_POST);
+			$nmsgs = get_input_value('_nmsg', RCUBE_INPUT_POST, true);
+			$dateparts = get_input_value('_datepart', RCUBE_INPUT_POST);
+			$weekdays = get_input_value('_weekday', RCUBE_INPUT_POST);
+			$advweekdays = get_input_value('_advweekday', RCUBE_INPUT_POST);
 
 			$script = array();
 			$script['join'] = ($join == 'allof') ? true : false;
